--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -291,6 +291,19 @@ import ytIcon from '../../assets/yt_icon.svg';
         margin-top: 4.5vh;
         margin-bottom: 8.9vh;
     }
+    
+    @media screen and (max-width: 1000px) { 
+        .footer-left > h2 {
+            font-size: 5.2vw;
+        }
+        #pod-dolacz {
+            font-size: 2.6vw;
+        }
+
+        #emailson {
+            font-size: 2.3vw;
+        }
+    }
 
     @media screen and (max-width: 700px) { 
         #footerlol {
