--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -1,5 +1,4 @@
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">17</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -9,8 +8,7 @@
     <a class="miejsce-wydarzenia">Gliwice, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">26</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -20,8 +18,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">19:00</a>
 </div>
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">29</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -31,8 +28,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">20:00</a>
 </div>
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">25</p>
         <p class="data-wydarzenia-m-r">May<br>2025</p>
@@ -42,8 +38,7 @@
     <a class="miejsce-wydarzenia">Kraków, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">12</p>
         <p class="data-wydarzenia-m-r">Jul<br>2025</p>
@@ -53,8 +48,7 @@
     <a class="miejsce-wydarzenia">Toruń, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<!-- <div class="wydarzenie" onclick="window.location.href='https://example.com';"> -->
-<div class="wydarzenie">
+<div class="wydarzenie" onclick="window.location.href='www.example.com';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">5</p>
         <p class="data-wydarzenia-m-r">Oct<br>2025</p>
@@ -78,15 +72,15 @@
         border-bottom: 1px solid #E4277640;
         padding: 0.3% 1% 0.3% 7px;
         margin-bottom: 11px;
-        /* cursor: pointer; */
+        cursor: pointer;
         transition: background 0.3s, color 0.3s;
     }
 
-    /* .wydarzenie:hover {
+    .wydarzenie:hover {
         background: rgba(250, 250, 250, 0.7); 
         backdrop-filter: blur(50px); 
 
-    } */
+    }
 
     .data-wydarzenia {
         color: #353535;
