--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -29,8 +29,8 @@ import Footer from '../../components/en_components/Footer.astro'
 				<div id="o-nas">
 					<div id="o-nas-left">
 						<h2 style="font-family: Gilda Display;">WHO<br>ARE WE?</h2>
-						<Image src={kimjestesmyPhoto} alt="Who are we" />
 					</div>
+					<Image src={kimjestesmyPhoto} alt="Who are we" />
 					<div id="o-nas-right">
 						<div id="o-nas-right-tekscik">
 							<p>
@@ -136,8 +136,21 @@ import Footer from '../../components/en_components/Footer.astro'
 		#o-nas {
 			display: grid;
 			grid-template-columns: 1fr 1fr;	
-			gap: 100px;
+			grid-template-rows: 20% 1fr;
+			gap: 130px 100px;
 			height: 970px;
+		}
+
+		#o-nas > img {
+			width: 98%;
+			height: auto;
+			margin-top: 85px;
+			grid-column: 1/2;
+			grid-row: 2/3;
+		}
+		#o-nas-right {
+			grid-column: 2/3;
+			grid-row: 1/3;
 		}
 
 		#o-nas-left {
@@ -244,6 +257,7 @@ import Footer from '../../components/en_components/Footer.astro'
 
 		.wydarzenia > img {
 			height: 30vw;
+			width: auto;
 		}
 
 		/* Drugi quote sekcja */
@@ -254,8 +268,10 @@ import Footer from '../../components/en_components/Footer.astro'
 			grid-column: 1/4;
 			height: 56vw;
 		}
-		#second-quote-main > img{
-			height: 56vw;
+		#second-quote-main > img
+		{
+			width: 50vw;
+			height: auto;
 		}
 		#second-quote-main > div {
 			display: flex;
@@ -301,11 +317,11 @@ import Footer from '../../components/en_components/Footer.astro'
 /* max-width 1000px max-width 1000px max-width 1000px max-width 1000px max-width 1000px max-width 1000px max-width 1000px max-width 1000px max-width 1000px */
 		@media screen and (max-width: 1000px) {
 			#fantastica-glowna {
-				grid-template-rows: 110vh 72% 100vh 1fr;
+				grid-template-rows: 110vh 72%;
 			}
 			#main-readable-portion {
 				width: -webkit-fill-available;
-				grid-template-rows: 10vh 1250px 82vh 1360px 40vh 42vh;
+				grid-template-rows: 10vh 196vw 82vh calc(800px + 117vw) auto;
 			}
 
 			#o-nas-containter {
@@ -315,20 +331,31 @@ import Footer from '../../components/en_components/Footer.astro'
 			#o-nas {
 				position: relative; 
 				grid-template-columns: 1fr;
-				grid-template-rows: 1fr 1fr;
+				grid-template-rows: auto auto auto;
+				gap: 50px;
 			}
 			#o-nas-left {
-				grid-row: 1/2;height: 264vw;
-			}
-			#o-nas-left img {
-				width: 95%;
-				align-self: center;
+				height: auto;
+				gap: 5px;																																															
+				grid-column: 1/2;
+				grid-row: 1/2;
+				/* height: 264vw; */
 			}
 			#o-nas-right {
 				width: 91vw;
-				position: absolute;
-				top: 29vh;
+				/* position: absolute; */
+				/* top: 29vh; */
 				justify-self: center;
+				grid-column: 1/2;
+				grid-row: 2/3;
+				margin-bottom: 0;
+			}
+			#o-nas img {
+				width: 95%;
+				justify-self: center;
+				align-self: center;
+				grid-column: 1/2;
+				grid-row: 3/4;
 			}
 			#o-nas-right-tekscik {
 				width: 91vw;
@@ -341,8 +368,15 @@ import Footer from '../../components/en_components/Footer.astro'
 
 		/* kalendarz iphone */
 			.wydarzenia {
-				row-gap: 15vw;
+				/* row-gap: 15vw; */
+				gap: 111px;
 			}
+
+			#kalendarz-container > div {
+				align-self: auto;
+				margin-top: 4vh;
+			}
+
 			#kalendarz-container > div > h2 {
 				padding: 0;
 				font-size: 7vh;
@@ -354,23 +388,29 @@ import Footer from '../../components/en_components/Footer.astro'
 				grid-row: 5 / 6;
 				flex-direction: column-reverse;
 				height: fit-content;
+				font-size: 2.1vw;
+			}
+			#second-quote-main > div{
+				height: 450px;
+			}
+			#second-quote-main > div > a {
+				font-size: 2.1vw;
 			}
 			#second-purple-quote {
 				height: 500px;
 			}
 			#second-quote-main > img {
-				height: 114vw;
-				width: auto;
+				height: 600px;
+				width: 100vw;
+				object-fit: cover;    
+				object-position: bottom;
 			}
-			/* #second-quote-main > div {
-				grid-row: 2/3;
-			} */
+
 			.wydarzenia {
 				flex-direction: column;
 			}
 			.wydarzenia > img {
 				height: 114vw;
-				width: auto;
 			}
 
 /* max-width 600 pixels max-width 600 pixels max-width 600 pixels max-width 600 pixels max-width 600 pixels */
@@ -397,6 +437,19 @@ import Footer from '../../components/en_components/Footer.astro'
 			#fbl {
 				font-size: 12.5vw;
 				/* align-items: start; */
+			}
+
+			#second-quote-main {
+				height: auto;
+			}
+			#second-quote-main > img
+			{
+				width: 100vw;
+				height: 460px;
+			}
+			#second-quote-main > div
+			{        
+				height: 550px;
 			}
 			#second-quote-main > div > h2 {
 				font-size: 7.3vw;
