--- a/src/components/Projekty_cmpnt.astro
+++ b/src/components/Projekty_cmpnt.astro
@@ -543,6 +543,40 @@ import { ViewTransitions } from "astro:transitions";
 
 
 /* PROJEKTY RESPONSIVE */
+
+    @media (max-width: 1200px) {
+        .projekty-headline {
+            grid-template-columns: 6fr 7fr;
+        }
+        .projektyHeadlineImg {
+            height: 52vw;
+            align-self: flex-end;
+        }
+        .projekty-headline-text {
+            padding: 1vw 2vw;
+        }
+        .projekty-headline-text > h1 {
+            padding-bottom: 0vw;
+        }
+        .projekty-headline-text > p {
+            font-size: 2.2vw;
+        }
+        
+        .projekt-1-container {
+            width: 100vw;
+        }
+        .projekt-2-container {
+            width: 100vw;
+        }
+        .projekt-3-container {
+            width: 100vw;
+        }
+        .projekt-4-container {
+            width: 100vw;
+        }
+    }
+
+
     @media (max-width: 800px) {
         .projekty-container {
             grid-template-rows: 115vw 83vw 100vw 100vw 100vw;
