--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -1,4 +1,4 @@
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/7PWbNfdjF';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">17</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -8,7 +8,7 @@
     <a class="miejsce-wydarzenia">Gliwice, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/2DgL3KEWO';">
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">26</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -18,7 +18,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">19:00</a>
 </div>
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" >
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">29</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -28,7 +28,7 @@
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
     <a class="czas-wydarzenia">20:00</a>
 </div>
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" >
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">25</p>
         <p class="data-wydarzenia-m-r">May<br>2025</p>
@@ -38,7 +38,7 @@
     <a class="miejsce-wydarzenia">Kraków, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" >
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">12</p>
         <p class="data-wydarzenia-m-r">Jul<br>2025</p>
@@ -48,7 +48,17 @@
     <a class="miejsce-wydarzenia">Toruń, PL</a>
     <a class="czas-wydarzenia">18:00</a>
 </div>
-<div class="wydarzenie" onclick="window.location.href='www.example.com';">
+<div class="wydarzenie" >
+    <div class="data-wydarzenia">
+        <p class="data-wydarzenia-dzien">17</p>
+        <p class="data-wydarzenia-m-r">Aug<br>2025</p>
+    </div>
+    <a class="nazwa-wydarzenia">La Stella</a>
+    <a class="opis-wydarzenia">Baroque in Spiš</a>
+    <a class="miejsce-wydarzenia">Jurgów, PL</a>
+    <a class="czas-wydarzenia">18:00</a>
+</div>
+<div class="wydarzenie" >
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">5</p>
         <p class="data-wydarzenia-m-r">Oct<br>2025</p>
@@ -72,15 +82,20 @@
         border-bottom: 1px solid #E4277640;
         padding: 0.3% 1% 0.3% 7px;
         margin-bottom: 11px;
-        cursor: pointer;
         transition: background 0.3s, color 0.3s;
     }
+    #wydarzenie-klik:hover {
+        background: rgba(250, 250, 250, 0.7); 
+        backdrop-filter: blur(50px); 
+        cursor: pointer;
 
-    .wydarzenie:hover {
+    }
+    
+    /* .wydarzenie:hover {
         background: rgba(250, 250, 250, 0.7); 
         backdrop-filter: blur(50px); 
 
-    }
+    } */
 
     .data-wydarzenia {
         color: #353535;
