--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -369,12 +369,14 @@ import Footer from '../../components/en_components/Footer.astro'
 		/* kalendarz iphone */
 			.wydarzenia {
 				/* row-gap: 15vw; */
-				gap: 111px;
+				height: auto;
+				gap: 50px;
 			}
 
 			#kalendarz-container > div {
 				align-self: auto;
 				margin-top: 4vh;
+				padding-bottom: 2.5vh;
 			}
 
 			#kalendarz-container > div > h2 {
@@ -419,7 +421,7 @@ import Footer from '../../components/en_components/Footer.astro'
 				grid-template-rows: 110vh 1fr;
 			}
 			#main-readable-portion {        
-				grid-template-rows: 10vh 1250px 82vh calc(960px + 114vw) calc(515px + 114vw);
+				grid-template-rows: 10vh 1250px 82vh auto calc(515px + 114vw);
 			}
 			#first-photo-text-container > p {
 				font-size: 2.7rem;
