--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -370,12 +370,14 @@ import Footer from '../components/Footer.astro'
 		/* kalendarz iphone */
 			.wydarzenia {
 				/* row-gap: 15vw; */
-				gap: 111px;
+				height: auto;
+				gap: 50px;
 			}
 
 			#kalendarz-container > div {
 				align-self: auto;
 				margin-top: 4vh;
+				padding-bottom: 2.5vh;
 			}
 
 			#kalendarz-container > div > h2 {
@@ -417,7 +419,7 @@ import Footer from '../components/Footer.astro'
 				grid-template-rows: 110vh 1fr;
 			}
 			#main-readable-portion {        
-				grid-template-rows: 10vh 1250px 82vh calc(960px + 114vw) calc(515px + 114vw);
+				grid-template-rows: 10vh 1250px 82vh auto calc(515px + 114vw);
 			}
 
 			#o-nas img {
