--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -110,7 +110,7 @@ const homeLink = isEnglish ? "/en" : "/";
       color: yellow;
     }
     .logo-container {
-        padding-left: 7vw;
+        margin-left: 7vw;
     }
 
     .desktop-nav {
