--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,6 +233,8 @@ import Footer from '../components/Footer.astro'
 			width: 90%;
 			padding: 0 5.5vw;
 			padding-bottom: 17vh;
+			
+			/* padding-left: 0; */
 		}
 
 		#kalendarz-container > div > h2 {
