Kalendarz mobile fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -436,7 +436,7 @@ import Footer from '../components/Footer.astro'
 				height: auto;
 			}
 			#kalendarz-container > div {
-				height: -webkit-fill-available;
+				height: auto;
 			}
 			.fantastica-big-letters {
 				align-self: start;
