--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -431,7 +431,7 @@ import Footer from '../../components/en_components/Footer.astro'
 				height: auto;
 			}
 			#kalendarz-container > div {
-				height: -webkit-fill-available;
+				height: auto;
 			}
 			.fantastica-big-letters {
 				align-self: start;
