Kalendarz mobile fix

--- a/src/components/Wydarzenie-przyszle.astro
+++ b/src/components/Wydarzenie-przyszle.astro
@@ -219,6 +219,7 @@
         }
         .loader {
             left: 1vw;
+            padding-top: 3vh;
         }            
         .bubble {
             width: 8px;
