--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -218,6 +218,7 @@
             left: 1vw;
         }            
         .bubble {
+            margin-top: 3vh;
             width: 8px;
             height: 8px;
             border-radius: 50%;
