Kalendarz mobile fix

--- a/src/components/Wydarzenie-przyszle.astro
+++ b/src/components/Wydarzenie-przyszle.astro
@@ -219,7 +219,7 @@
         }
         .loader {
             left: 1vw;
-            padding-top: 3vh;
+            padding-top: 27px;
         }            
         .bubble {
             width: 8px;
