--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -216,9 +216,9 @@
         }
         .loader {
             left: 1vw;
+            padding-top: 27px;
         }            
         .bubble {
-            margin-top: 3vh;
             width: 8px;
             height: 8px;
             border-radius: 50%;
@@ -226,6 +226,5 @@
             margin: 0 5px;
             animation: bubbleAnimation 3s ease-in-out infinite;
         }
-    }
     }
 </style>
