--- a/src/components/en_components/Projekty_cmpnt.astro
+++ b/src/components/en_components/Projekty_cmpnt.astro
@@ -548,7 +548,7 @@ import { ViewTransitions } from "astro:transitions";
 
 /* PROJEKTY RESPONSIVE */
 
-    @media (max-width: 1200px) {
+    @media (max-width: 1200px) and (min-width: 800px) {
         .projekty-headline {
             grid-template-columns: 6fr 7fr;
         }
