--- a/src/components/en_components/Wydarzenie-przyszle copy.astro
+++ b/src/components/en_components/Wydarzenie-przyszle copy.astro
@@ -1,7 +1,4 @@
 <div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/7PWbNfdjF';">
-    <div class="loader">
-        <div class="bubble"></div>
-    </div>      
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">17</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -12,9 +9,6 @@
     <a class="czas-wydarzenia">18:00</a>
 </div>
 <div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/2DgL3KEWO';">
-    <div class="loader">
-        <div class="bubble"></div>
-    </div>      
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">26</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
@@ -92,16 +86,15 @@
     }
     #wydarzenie-klik:hover {
         background: rgba(250, 250, 250, 0.7); 
-        /* backdrop-filter: blur(50px);  */
+        backdrop-filter: blur(50px); 
         cursor: pointer;
 
     }
-
-    /* .wydarzenie:hover {
+    .wydarzenie:hover {
         background: rgba(250, 250, 250, 0.7); 
         backdrop-filter: blur(50px); 
 
-    } */
+    }
 
     .data-wydarzenia {
         color: #353535;
@@ -143,33 +136,6 @@
             text-align: right;
         }
 
-        .loader {
-            position: absolute;
-            left: calc(5vw - 24px);
-            
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* height: 100%; */
-        }
-
-            .bubble {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background-image: linear-gradient(to right, #ff6b9d, #ffb8d9);
-            margin: 0 5px;
-            animation: 2s pulse infinite ease-in-out;
-        }
-        @keyframes pulse {
-            0% {
-                box-shadow: 0 0 0 0 #ffb8d9;
-            }
-
-            100% {
-                box-shadow: 0 0 0 9px #69ffa800;
-            }
-        }
         @media screen and (max-width: 1200px) {
             .wydarzenie a {
                 font-size: 14px;
@@ -211,13 +177,5 @@
         #lastella {
             margin-left: 0;
         }
-        .loader {
-            left: 1vw;
-            padding-top: 28px;
-        }            
-        .bubble {
-            width: 8px;
-            height: 8px;
         }
-    }
 </style>
