--- a/src/components/en_components/Wydarzenie-przyszle-cool-kropka.astro
+++ b/src/components/en_components/Wydarzenie-przyszle-cool-kropka.astro
@@ -218,6 +218,10 @@
         .bubble {
             width: 8px;
             height: 8px;
+            border-radius: 50%;
+            background-image: linear-gradient(to right, #ff6b9d, #ffb8d9);
+            margin: 0 5px;
+            animation: bubbleAnimation 3s ease-in-out infinite;
         }
     }
 </style>
