Kalendarz: zmiana animacji

--- a/src/components/en_components/Wydarzenie-przyszle-cool-kropka.astro
+++ b/src/components/en_components/Wydarzenie-przyszle-cool-kropka.astro
@@ -212,8 +212,9 @@
             margin-left: 0;
         }
         .loader {
-            left: 1vw;
-            padding-top: 7px;
+            left: 5.5vw;
+            /* padding-bottom: 48px; */
+            padding-top: 56px;
         }            
         .bubble {
             width: 8px;
