--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -107,7 +107,9 @@ import { ViewTransitions } from "astro:transitions";
         grid-column: 2/3;
         object-fit: cover;
         width: 66vw;
-        height: -webkit-fill-available;
+        height: fit-content;    
+        width: auto;
+        object-fit: cover;
         box-shadow: -2px 1px 8.7px 0px rgba(0,0,0,0.25);
     }
 
