--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -106,9 +106,8 @@ import { ViewTransitions } from "astro:transitions";
         grid-row: 1/3;
         grid-column: 2/3;
         object-fit: cover;
+        height: -webkit-fill-available;
         width: 66vw;
-        height: fit-content;    
-        width: auto;
         object-fit: cover;
         box-shadow: -2px 1px 8.7px 0px rgba(0,0,0,0.25);
     }
