--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -106,8 +106,9 @@ import { ViewTransitions } from "astro:transitions";
         grid-row: 1/3;
         grid-column: 2/3;
         object-fit: cover;
-        width: 66vw;
         height: -webkit-fill-available;
+        width: 66vw;
+        object-fit: cover;
         box-shadow: -2px 1px 8.7px 0px rgba(0,0,0,0.25);
     }
 
