--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -70,7 +70,7 @@ import Footer from '../../components/en_components/Footer.astro'
 				<Image src={secondPhotoMain} alt="Photo of Klaudia and Aleksandra with second quote" loading="lazy" decoding="async"/>
 				<div>
 					<h2>“Revolutionizing the world of Baroque music with their innovative approach.”</h2>
-					<h4>Autorka<br>Karolina Sajniak-Drzyzga
+					<h4>Karolina Sajniak-Drzyzga<br>
 						Julian Cochran Foundation </h4>
 					<a>“Captivating,
 						expressive performances demonstrate the musicians' deep passion for the repertoire of the
@@ -82,7 +82,7 @@ import Footer from '../../components/en_components/Footer.astro'
 						
 						Translated with DeepL.com (free version).”
 					</a>
-					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek,<br>Krzysztof Penderecki Academy of Music, Capella
+					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek<br>Krzysztof Penderecki Academy of Music, Capella
 						Cracoviensis, Młoda Muzyka Dawna festival</h4>
 				</div>
 			</div>
