--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -281,7 +281,7 @@ import ytIcon from '../assets/yt_icon.svg';
         display: block;
         font-size: 2.9vh;
         margin-left: 1vw;
-        margin-top: 4.5vh;
+        margin-top: 0;
         margin-bottom: 8.9vh;
     }
 
