--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,7 @@ import Footer from '../components/Footer.astro'
 				<Image src={secondPhotoMain} alt="Zdjęcie Klaudii i Aleksandry przy drugim cytacie" loading="lazy" decoding="async"/>
 				<div id="second-purple-quote">
 					<h2>“Rewolucjonizują świat muzyki barokowej swoim nowatorskim podejściem”</h2>
-					<h4>Autorka<br>Karolina Sajniak-Drzyzga
+					<h4>Karolina Sajniak-Drzyzga<br>
 						Julian Cochran Foundation </h4>
 						<a>“Porywające,
 							ekspresyjne wykonania ukazują głęboką pasję muzyków do repertuaru
@@ -85,7 +85,7 @@ import Footer from '../components/Footer.astro'
 							odważnie eksplorując alternatywne miejsca koncertowe i pokazując
 							muzykę baroku szerszemu gronu odbiorców. To zespół, którego
 							poczynania warto śledzić!”</a>
-					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek,<br>Akademia Muzyczna im. Krzysztofa Pendereckiego, Capella
+					<h4 style="padding-top: 1vw; text-align: left;">Katarzyna Czubek<br>Akademia Muzyczna im. Krzysztofa Pendereckiego, Capella
 						Cracoviensis, festiwal Młoda Muzyka Dawna</h4>
 				</div>
 			</div>
