--- a/src/components/Wydarzenie-przyszle.astro
+++ b/src/components/Wydarzenie-przyszle.astro
@@ -1,10 +1,6 @@
----
-import { Image } from 'astro:assets';
-import Strzlk from '../assets/strzlk4hover.png';
----
 <div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/7PWbNfdjF';">
     <div class="loader">
-        <Image src={Strzlk} alt="" />
+        <div class="bubble"></div>
     </div>      
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">17</p>
@@ -17,8 +13,8 @@ import Strzlk from '../assets/strzlk4hover.png';
 </div>
 <div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/2DgL3KEWO';">
     <div class="loader">
-        <Image src={Strzlk} alt="" />
-    </div>    
+        <div class="bubble"></div>
+    </div>      
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">26</p>
         <p class="data-wydarzenia-m-r">kwie<br>2025</p>
@@ -151,18 +147,31 @@ import Strzlk from '../assets/strzlk4hover.png';
 
         .loader {
             position: absolute;
-            padding-bottom: 45px;
-            left: 68.1vw;   
-            display: flex        ;
+            left: calc(5vw - 24px);
+            
+            display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
-        }
-        .loader img {
-            width: 10px;
-            height: 10px;
+            /* height: 100%; */
         }
 
+            .bubble {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-image: linear-gradient(to right, #ff6b9d, #ffb8d9);
+            margin: 0 5px;
+            animation: 2s pulse infinite ease-in-out;
+        }
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 0 0 #ffb8d9;
+            }
+
+            100% {
+                box-shadow: 0 0 0 9px #69ffa800;
+            }
+        }
         @media screen and (max-width: 1200px) {
             .wydarzenie a {
                 font-size: 14px;
@@ -214,8 +223,12 @@ import Strzlk from '../assets/strzlk4hover.png';
             margin-left: 0;
         }
         .loader {
-            left: 6.2vw;
-            padding-top: 101px;
+            left: 1vw;
+            padding-top: 28px;
         }            
+        .bubble {
+            width: 8px;
+            height: 8px;
+        }
     }
 </style>
