--- a/src/components/en_components/Posluchaj_cmpnt.astro
+++ b/src/components/en_components/Posluchaj_cmpnt.astro
@@ -145,6 +145,10 @@ import { ViewTransitions } from "astro:transitions";
     .ytButton, .spotifyButton, .appleButton {
         width: 100%;
     }
+    .ytButton:hover, .spotifyButton:hover, .appleButton:hover {
+        scale: 1.07;
+        /* box-shadow: 0 0px 20px rgba(193, 163, 98,0.4); */
+    }
     @media screen and (max-width: 800px) {
         .naZywo {
             width: 88vw;
